--- a/style.css
+++ b/style.css
@@ -19,12 +19,11 @@
   .container {
     max-width: 700px;
     height: auto;
-    background-color: #aba0a0; /* Light gray background */
+    background-color:  rgb(129, 87, 36);
     margin: 50px auto;
     border-radius: 10px;
     padding: 20px;
-    box-shadow: 6 8 50px rgba(0, 0, 0, 0.1); /* Improved box shadow */
-}
+    box-shadow: 6 8 50px rgba(0, 0, 0, 0.1); 
   
   #formSubmission{
     margin: 10px;
