--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   
   body{
     font-family: 'Roboto', sans-serif;
-    background-color: darkblue;
+    background-color: white;
     font-size: 16px;
     color:#fff;
   }
@@ -19,7 +19,7 @@
   .container {
     max-width: 700px;
     height: auto;
-    background-color:  rgb(129, 87, 36);
+    background-color:  blueviolet;
     margin: 50px auto;
     border-radius: 10px;
     padding: 20px;
