--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
   .container {
     max-width: 700px;
     height: auto;
-    background-color:  blueviolet;
+    background-color:  slateblue;
     margin: 50px auto;
     border-radius: 10px;
     padding: 20px;
